--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/login.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/login.html
@@ -4,22 +4,27 @@
             <!--<div class="col-xs-10 col-xs-offset-1 text-center">-->
             <div class="col-xs-12">
                 <div class="well text-center">
-                    <img src="img/logo.png">
+                    <img src="img/logo.png" style="margin: 8px;">
                     <form name="msisdnForm" ng-submit="doMsisdnLogin()" class="form-horizontal">
                         <fieldset>
                             <div class="form-group">
                                 <label for="msisdnInput" class="col-xs-2 control-label" ng-bind="strings.MSISDN_LABEL"></label>
                                 <div class="col-xs-9 col-xs-push-1">
-                                    <input type="tel" class="form-control empty" ng-model="msisdn"
-                                           id="msisdnInput" placeholder="{{strings.MSISDN_HOLDER}}">
-                                    <span class="material-input"></span>
+                                    <div class="input-group">
+                                        <span class="input-group-addon">+58</span>
+                                        <label for="msisdnInput" class="col-xs-2 control-label sr-only"
+                                               ng-bind="strings.MSISDN_LABEL"></label>
+                                        <input type="tel" class="form-control empty" ng-model="msisdn"
+                                               id="msisdnInput" placeholder="{{strings.MSISDN_HOLDER}}">
+                                        <span class="material-input"></span>
+                                    </div>
                                 </div>
                             </div>
 
                             <div class="form-group">
                                 <label for="passwordInput" class="col-xs-2 control-label" ng-bind="strings.PASSWORD_LABEL"></label>
                                 <div class="col-xs-9 col-xs-push-1">
-                                    <input type="password" class="form-control empty" ng-model="msisdn"
+                                    <input type="password" class="form-control empty" ng-model="password"
                                            id="passwordInput" placeholder="{{strings.PASSWORD_HELPER}}">
                                     <span class="material-input"></span>
                                 </div>
@@ -44,7 +49,7 @@
                     </form>
 
                     <div class="list-group">
-                        <a href="#" class="list-group-item list-item">
+                        <a ui-sref="remind" class="list-group-item list-item">
                             <div class="col-xs-10">
                                 <span>{{strings.REMIND_LABEL}}</span>
                             </div>
@@ -62,7 +67,7 @@
                             </div>
                         </a>
                         <div class="full-separator"></div>
-                        <a href="#" class="list-group-item list-item">
+                        <a ui-sref="login" class="list-group-item list-item">
                             <div class="col-xs-10">
                                 <span>{{strings.TUTORIAL_LABEL}}</span>
                             </div>
@@ -72,7 +77,6 @@
                         </a>
                     </div>
 
-                    <!--TODO implementar enterAsGuest-->
                     <form name="msisdnForm" ng-submit="enterAsGuest()" class="form-horizontal">
                         <fieldset>
                             <div class="form-group">
