FUTBOL BRASIL:  - Completada funcionalidad de Share, con plugin que permite compartir a Facebook y Twitter cuando la plataforma detectada es Web. Y usa el plugin de Cordova en Android (Intents) e iOS

--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/news.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/news.html
@@ -34,7 +34,7 @@
     <div class="scroller">
         <div class="container">
             <div class="row row-news-detail-header">
-                <div class="col-xs-12 text-right">
+                <div class="col-xs-12 text-right" ng-click="share(contentNews)">
                     <i class="mdi-social-share" style="font-size: 1.8em; line-height: 1.8em;"></i>
                 </div>
             </div>
