--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/language-selection.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/language-selection.html
@@ -14,7 +14,7 @@
     </div>
 </div>
 
-<div class="row">
+<div class="row" ng-show="languages.length > 0">
     <div id="wrapper" class="search-list-wrapper">
         <div class="scroller">
             <div class="list-group">
@@ -30,6 +30,15 @@
                     <div class="list-group-separator"></div>
                 </div>
             </div>
+        </div>
+    </div>
+</div>
+
+<div class="row" ng-hide="languages.length > 0">
+    <div class="col-xs-12">
+        <div class="no-content-panel" style="margin-top: 120px !important;">
+            <i class="mdi-action-info-outline"></i>
+            <div class="no-content-panel-title" translate>EMPTY_STATES.LANGUAGES</div>
         </div>
     </div>
 </div>
