--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/team-selection.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/team-selection.html
@@ -1,34 +1,45 @@
 
-        <div class="row">
-            <div class="col-xs-12">
-                <form class="form-horizontal" style="position: absolute; z-index: 2;">
-                    <div class="form-group well search-bar">
-                        <div class="input-group">
-                            <input type="text" class="form-control" placeholder="{{'SETTINGS.TEAM_SEARCH_HELPER' | translate}}" ng-model="searchQuery">
-                            <span class="input-group-addon"><i class="icon mdi-action-search" style="font-size:1.8em;"></i></span>
-                        </div>
-                    </div>
-                </form>
+<div class="row">
+    <div class="col-xs-12">
+        <form class="form-horizontal" style="position: absolute; z-index: 2;">
+            <div class="form-group well search-bar">
+                <div class="input-group">
+                    <input type="text" class="form-control"
+                           placeholder="{{'SETTINGS.TEAM_SEARCH_HELPER' | translate}}"
+                           ng-model="searchQuery">
+                    <span class="input-group-addon">
+                        <i class="icon mdi-action-search" style="font-size:1.8em;"></i>
+                    </span>
+                </div>
             </div>
-        </div>
+        </form>
+    </div>
+</div>
 
-        <div class="row">
-            <div id="wrapper" class="search-list-wrapper">
-                <div class="scroller">
-                    <div class="list-group">
-                        <div ng-repeat="team in teams | filter: searchQuery">
-                            <div class="list-group-item" ng-click="teamSelected(team)">
-                                <div class="row-action-primary">
-                                    <i ng-class="getTeamClass(team)"></i>
-                                </div>
-                                <div class="row-content">
-                                    <h6 class="list-group-item-heading" ng-bind="team.name"></h6>
-                                    <!--<p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus.</p>-->
-                                </div>
-                            </div>
-                            <div class="list-group-separator"></div>
+<div class="row" ng-show="teams.length > 0">
+    <div id="wrapper" class="search-list-wrapper">
+        <div class="scroller">
+            <div class="list-group">
+                <div ng-repeat="team in teams | filter: searchQuery">
+                    <div class="list-group-item" ng-click="teamSelected(team)">
+                        <div class="row-action-primary">
+                            <i ng-class="getTeamClass(team)"></i>
+                        </div>
+                        <div class="row-content">
+                            <h6 class="list-group-item-heading" ng-bind="team.name"></h6>
                         </div>
                     </div>
+                    <div class="list-group-separator"></div>
                 </div>
             </div>
         </div>
+    </div>
+</div>
+<div class="row" ng-hide="teams.length > 0">
+    <div class="col-xs-12">
+        <div class="no-content-panel" style="margin-top: 120px !important;">
+            <i class="mdi-action-info-outline"></i>
+            <div class="no-content-panel-title" translate>EMPTY_STATES.TEAMS</div>
+        </div>
+    </div>
+</div>
