--- a/FutbolBrasil/web/app/views/wap/mtm.scala.html
+++ b/FutbolBrasil/web/app/views/wap/mtm.scala.html
@@ -1,7 +1,7 @@
-@(HD: models.HandsetDetection)(jResponse: com.fasterxml.jackson.databind.JsonNode)(idCompetition: Integer)(nameCompetition: String)(idMatch: Integer) @if(HD.getLevelSupport() ==  models.HandsetDetection.XHTML_SIMPLE){@xml}
+@(HD: models.wap.HandsetDetection)(jResponse: com.fasterxml.jackson.databind.JsonNode)(idCompetition: Integer)(nameCompetition: String)(idMatch: Integer) @if(HD.getLevelSupport() ==  models.wap.HandsetDetection.XHTML_SIMPLE){@xml}
 @xml = {<?xml version="1.0" encoding="UTF-8"?>}
 
-@if(HD.getLevelSupport() ==  models.HandsetDetection.HTML4) {
+@if(HD.getLevelSupport() ==  models.wap.HandsetDetection.HTML4) {
 
     @html4("html4"){
 
