--- a/FutbolBrasil/web/app/views/wap/news.scala.html
+++ b/FutbolBrasil/web/app/views/wap/news.scala.html
@@ -1,8 +1,8 @@
-@(HD: models.HandsetDetection)(jNews: com.fasterxml.jackson.databind.JsonNode)(view: String) @if(HD.getLevelSupport() ==  models.HandsetDetection.XHTML_SIMPLE){@xml}
+@(HD: models.wap.HandsetDetection)(jNews: com.fasterxml.jackson.databind.JsonNode)(view: String) @if(HD.getLevelSupport() ==  models.wap.HandsetDetection.XHTML_SIMPLE){@xml}
 @xml = {<?xml version="1.0" encoding="UTF-8"?>}
 
-@if((HD.getLevelSupport() ==  models.HandsetDetection.XHTML_SIMPLE)
-    || (HD.getLevelSupport() ==  models.HandsetDetection.XHTML_ADV)) {
+@if((HD.getLevelSupport() ==  models.wap.HandsetDetection.XHTML_SIMPLE)
+    || (HD.getLevelSupport() ==  models.wap.HandsetDetection.XHTML_ADV)) {
     @xhtmlmp("xhtmlmp"){
         @if(view == "summary") {
             <h3>@jNews.get("title").asText()</h3>
@@ -19,7 +19,7 @@
     }
 } else {
 
-    @if(HD.getLevelSupport() ==  models.HandsetDetection.HTML4) {
+    @if(HD.getLevelSupport() ==  models.wap.HandsetDetection.HTML4) {
 
         @html4("html4"){
             @if(view == "summary") {
